--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "test": "karma start karma.conf.js",
     "build": "webpack --config webpack.config.js",
-    "dev": "webpack-dev-server --config webpack.config.js --hot --inline"
+    "dev": "webpack-dev-server --config webpack.config.js --hot --inline",
+    "commit": "git-cz"
   },
   "keywords": [
     "book"
   ],
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/mahpah/ng16"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mahpah/ng16"
   },
   "author": "mahpah",
   "license": "MIT",
@@ -23,9 +24,9 @@
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.29",
     "chai": "^3.3.0",
-    "commitizen": "^1.0.4",
+    "commitizen": "^1.0.5",
     "css-loader": "^0.21.0",
-    "cz-conventional-changelog": "^1.1.2",
+    "cz-conventional-changelog": "^1.1.3",
     "file-loader": "^0.8.4",
     "isparta-instrumenter-loader": "^0.2.1",
     "isparta-loader": "^1.0.0",
@@ -50,5 +51,8 @@
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
