--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chomuonsach",
+  "name": "ng16",
   "version": "1.0.0",
   "description": "Because money matter",
   "main": "dist/index.html",
