--- a/package.json
+++ b/package.json
@@ -21,29 +21,32 @@
   "devDependencies": {
     "angular": "^1.4.7",
     "angular-mocks": "^1.4.7",
-    "babel-loader": "^5.3.2",
-    "babel-runtime": "^5.8.29",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-runtime": "^6.6.1",
     "chai": "^3.3.0",
-    "commitizen": "^1.0.5",
-    "css-loader": "^0.21.0",
+    "commitizen": "^2.7.6",
+    "css-loader": "^0.23.1",
     "cz-conventional-changelog": "^1.1.3",
     "file-loader": "^0.8.4",
-    "isparta-instrumenter-loader": "^0.2.1",
-    "isparta-loader": "^1.0.0",
-    "istanbul-instrumenter-loader": "^0.1.3",
+    "isparta-instrumenter-loader": "^1.0.0",
+    "isparta-loader": "^2.0.0",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.1.1",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
     "ncp": "^2.0.0",
     "node-sass": "^3.4.1",
-    "phantomjs": "^1.9.18",
+    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.1",
