--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "devDependencies": {
     "angular": "^1.4.7",
     "angular-mocks": "^1.4.7",
+    "awesome-typescript-loader": "^0.16.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^6.6.1",
+    "browser-sync-webpack-plugin": "^1.0.1",
     "chai": "^3.3.0",
     "commitizen": "^2.7.6",
     "css-loader": "^0.23.1",
@@ -50,6 +52,7 @@
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
+    "typescript": "^1.8.10",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
