--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "karma start karma.conf.js",
     "build": "webpack --config webpack.config.js",
     "dev": "webpack-dev-server --config webpack.config.js --hot --inline",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "keywords": [
     "book"
@@ -27,6 +28,7 @@
     "babel-runtime": "^6.6.1",
     "chai": "^3.3.0",
     "commitizen": "^2.7.6",
+    "conventional-changelog-cli": "^1.1.1",
     "css-loader": "^0.23.1",
     "cz-conventional-changelog": "^1.1.3",
     "file-loader": "^0.8.4",
