--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "isparta-instrumenter-loader": "^1.0.0",
     "isparta-loader": "^2.0.0",
     "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.3",
     "karma-coverage": "^0.5.3",
+    "karma-jasmine": "^0.3.8",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
